# px4_centering

./: PX4_VELOCITY_LIMITING.md
config/: config.yaml
install/: local_setup.sh  setup.sh
install/control/share/ament_index/resource_index/package_run_dependencies/: control
install/control/share/ament_index/resource_index/parent_prefix_path/: control
install/control/share/control/: local_setup.sh  package.sh
install/control/share/control/config/: config.yaml
install/control/share/control/launch/: px4_mavros.launch.py
log/: latest_build  latest_info  latest_test
src/control/: CMakeLists.txt  package.xml
src/control/config/: config.yaml
src/control/include/: control_.hpp  drone_controller_.hpp  geo_.hpp  math_.hpp
src/control/launch/: control_only.launch.py
src/control/src/mission/: control.cpp  path.cpp  test.cpp
src/control/src/testing/: drone_controller.cpp
src/control/utils/: control_.cpp  geo_.cpp  math_.cpp
